tests/baselines/reference/jsxNamespacePrefixInName.errors.txt
jsxNamespacePrefixInName.tsx(1,20): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(2,20): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(2,31): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(3,20): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(3,46): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(4,20): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(4,39): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(5,20): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(5,54): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(7,26): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(7,32): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(8,26): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(8,32): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(8,38): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(8,45): error TS1005: '>' expected.
jsxNamespacePrefixInName.tsx(8,50): error TS1005: ',' expected.
jsxNamespacePrefixInName.tsx(8,51): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(9,26): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(9,32): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(9,53): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(9,60): error TS1005: '>' expected.
jsxNamespacePrefixInName.tsx(9,65): error TS1005: ',' expected.
jsxNamespacePrefixInName.tsx(9,66): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(10,26): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(10,32): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(10,46): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(10,53): error TS1005: '>' expected.
jsxNamespacePrefixInName.tsx(10,58): error TS1005: ',' expected.
jsxNamespacePrefixInName.tsx(10,59): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(11,26): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(11,32): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(11,61): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(11,68): error TS1005: '>' expected.
jsxNamespacePrefixInName.tsx(11,73): error TS1005: ',' expected.
jsxNamespacePrefixInName.tsx(11,74): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(13,22): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(14,22): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(14,48): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(15,22): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(15,56): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(17,13): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(18,13): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(18,41): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(19,13): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(19,49): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(21,19): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(21,27): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(21,29): error TS1005: '...' expected.
jsxNamespacePrefixInName.tsx(21,29): error TS2698: Spread types may only be created from object types.
jsxNamespacePrefixInName.tsx(22,19): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(22,27): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(24,21): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(24,22): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(24,25): error TS1005: ',' expected.
jsxNamespacePrefixInName.tsx(24,30): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
jsxNamespacePrefixInName.tsx(24,38): error TS1005: ':' expected.
jsxNamespacePrefixInName.tsx(24,41): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(24,42): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(25,21): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(25,29): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(25,31): error TS1005: '...' expected.
jsxNamespacePrefixInName.tsx(25,31): error TS2698: Spread types may only be created from object types.
jsxNamespacePrefixInName.tsx(27,24): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxNamespacePrefixInName.tsx(28,24): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.


==== jsxNamespacePrefixInName.tsx (64 errors) ====
    var justElement1 = <a:element />;
                       ~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    var justElement2 = <a:element></a:element>;
                       ~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                  ~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    var justElement3 = <a:element attr={"value"}></a:element>;
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                                 ~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    var justElement4 = <a:element>{"text"}</a:element>;
                       ~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                          ~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    var justElement5 = <a:element attr={"value"}>{"text"}</a:element>;
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                                         ~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    
    var tooManySeparators1 = <a:ele:ment />;
                             ~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                   ~
!!! error TS1003: Identifier expected.
    var tooManySeparators2 = <a:ele:ment></a:ele:ment>;
                             ~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                   ~
!!! error TS1003: Identifier expected.
                                         ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                                ~
!!! error TS1005: '>' expected.
                                                     ~
!!! error TS1005: ',' expected.
                                                      ~
!!! error TS1109: Expression expected.
    var tooManySeparators3 = <a:ele:ment attr={"value"}></a:ele:ment>;
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                   ~
!!! error TS1003: Identifier expected.
                                                        ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                                               ~
!!! error TS1005: '>' expected.
                                                                    ~
!!! error TS1005: ',' expected.
                                                                     ~
!!! error TS1109: Expression expected.
    var tooManySeparators4 = <a:ele:ment>{"text"}</a:ele:ment>;
                             ~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                   ~
!!! error TS1003: Identifier expected.
                                                 ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                                        ~
!!! error TS1005: '>' expected.
                                                             ~
!!! error TS1005: ',' expected.
                                                              ~
!!! error TS1109: Expression expected.
    var tooManySeparators5 = <a:ele:ment attr={"value"}>{"text"}</a:ele:ment>;
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                   ~
!!! error TS1003: Identifier expected.
                                                                ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                                                       ~
!!! error TS1005: '>' expected.
                                                                            ~
!!! error TS1005: ',' expected.
                                                                             ~
!!! error TS1109: Expression expected.
    
    var justAttribute1 = <element a:attr={"value"} />;
                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    var justAttribute2 = <element a:attr={"value"}></element>;
                         ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                                   ~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    var justAttribute3 = <element a:attr={"value"}>{"text"}</element>;
                         ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                                           ~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    
    var both1 = <a:element a:attr={"value"} />;
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    var both2 = <a:element k:attr={"value"}></a:element>;
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                            ~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    var both3 = <a:element a:attr={"value"}>{"text"}</a:element>;
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                                    ~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    
    var endOfIdent1 = <a: attr={"value"} />;
                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                              ~
!!! error TS1003: Identifier expected.
                                ~~~~~~~
!!! error TS1005: '...' expected.
                                ~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
    var endOfIdent2 = <a attr:={"value"} />;
                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                              ~
!!! error TS1003: Identifier expected.
    
    var beginOfIdent1 = <:a attr={"value"} />;
                        ~
!!! error TS1109: Expression expected.
                         ~
!!! error TS1109: Expression expected.
                            ~~~~
!!! error TS1005: ',' expected.
                                 ~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                                         ~
!!! error TS1005: ':' expected.
                                            ~
!!! error TS1109: Expression expected.
                                             ~
!!! error TS1109: Expression expected.
    var beginOfIdent2 = <a :attr={"value"} />;
                        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                                ~
!!! error TS1003: Identifier expected.
                                  ~~~~~~~
!!! error TS1005: '...' expected.
                                  ~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
    
    var upcaseComponent1 = <ns:Upcase />;  // Parsed as intrinsic
                           ~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    var upcaseComponent2 = <Upcase:element />;  // Parsed as instrinsic
                           ~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    